# chequecomemos-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALISIS_ESTADO.md  CHANGELOG.md  README.md  db.dbml  init.sql  justificacion_BD.md  planificador_semana_completo.xlsx  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/instructions/: commits.instructions.md  fastapi-core-config.instructions.md  fastapi-general-rules.instructions.md  python.instructions.md
alembic/: env.py
alembic/versions/: 0ab993e283d1_se_arreglan_los_modelos_de_users.py  14c0adbfcad7_se_arreglan_los_modelos_de_users.py  1b56329adfc0_tabla_recipes_y_tabla_intermedia_recipe_.py  3dbe7bd73dab_crea_tablas_user_y_categories.py  966b7fa0ca58_add_users_table.py  9a5a6797ac0c_agregar_modelo_de_tabla_categorias.py  9ff77af7f43e_agrega_tabla_ingredients.py  b24286c2e192_reparo_relacion_de_ingredientes_.py  b7ac4eafd647_se_cambian_los_id_del_tipo_int_al_tipo_.py  f9095d415380_agrega_tabla_ingredients.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  categories.py  ingredients.py  users.py
app/core/: __init__.py  db.py  security.py
app/dependencies/: get_db.py
app/models/: __init__.py  categories.py  ingredients.py  recipe_ingredients.py  recipes.py  users.py
app/schemas/: __init__.py  categories_schema.py  user_schema.py
app/services/: __init__.py  categories_service.py  ingredients_service.py  recipes_service.py  user_service.py
postman/: Planificador_Comidas.postman_collection.json  Planificador_Comidas.postman_environment.json
tests/unit/: test_recipes_service.py  test_user_service.py
