# Configuraci贸n de build system para empaquetar con setuptools.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Metadatos y dependencias principales del proyecto FastAPI.
[project]
name = "chequecomemos-api"
version = "0.1.0"
description = "API FastAPI para el planificador familiar de comidas."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Cristian Rosales" }]
dependencies = [
  "fastapi[standard]>=0.110,<1.0",
  "uvicorn[standard]>=0.24,<1.0",
  "pydantic>=2.5,<3.0",
  "alembic>=1.12,<2.0",
  "passlib>=1.7,<2.0",
  "bcrypt>=4.0,<5.0",
  "sqlmodel>=0.0.8,<0.1.0",
  "aiosqlite>=0.19,<1.0",
]

# Paquete de dependencias para entorno de desarrollo y herramientas auxiliares.
[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
  "pytest-asyncio>=0.21,<0.25",
  "httpx>=0.25,<0.28",
  "coverage[toml]>=7.4,<8.0",
  "ruff>=0.3.0",
  "black>=23.12",
  "commitizen>=3.14,<4.0",
  "pre-commit>=3.0,<4.0",
]

# Convenciones de formato aplicadas por Black.
[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"

# Configuraci贸n general de linting con Ruff.

[tool.ruff]
line-length = 88
src = ["app", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Preferencias para la ejecuci贸n de Pytest.
[tool.pytest.ini_options]
addopts = "--maxfail=1"
testpaths = ["tests"]

# Cobertura: opciones de ejecuci贸n y reporte.
[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# Convenciones y versionado administrado por Commitizen.
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version-alpha"
version_scheme = "semver2"
version = "0.2.0"
update_changelog_on_bump = true
major_version_zero = true
